--- a/client/src/app/components/blog/delete-blog/delete-blog.component.html
+++ b/client/src/app/components/blog/delete-blog/delete-blog.component.html
@@ -9,8 +9,7 @@
     <div class="ui divided items">
       <div class="item">
         <div class="image">
-            <!-- <img src=""> -->
-            Image
+            <img src={{blog.image}}>
         </div>
         <div class="content">
           <a class="header" href="#">{{ blog.title }}</a>
