--- a/client/src/app/components/profile/profile.component.html
+++ b/client/src/app/components/profile/profile.component.html
@@ -1,30 +1,62 @@
 <div class="ui huge dividing header">
   Your Profile
 </div>
-<div class="ui divided items">
+
+<div class="ui message" [ngClass]="messageClass">
+  <p>{{ message }}</p>
+</div>
+
+<div class="ui divided items" *ngIf="!editMode && !isLoading">
   <div class="item">
     <div class="content">
-      <div class="header">
-        {{ username }}
-      </div>
-      <div class="meta">
-        <span class="cinema">About Me</span>
-      </div>
-      <div class="description">
-        <p>This is where you will be able to say where you like to shop and your favorite brands</p>
+      <div class="ui grid">
+        <div class="ui medium rounded image four wide column">
+          <img src={{user.image}} alt="User Picture Here">
+        </div>
+        <div class="twelve wide column">
+          <div class="ui header">
+            {{ user.username }} - {{ user.email }}
+            <button class="ui secondary right floated mini button" (click)="enableEditMode()"><i class="edit icon"></i>&nbsp;Edit</button>
+          </div>
+          <div class="meta">
+            <div class="cinema">About Me - This will display on your Public Profile</div>
+          </div>
+          <div class="description">
+            <p>{{ user.aboutMe }}</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
+</div>
+
+<div class="ui divided items" *ngIf="editMode">
   <div class="item">
     <div class="content">
-      <div class="header">
-        {{ email }}
-      </div>
-      <div class="meta">
-        <span class="cinema">My Email</span>
-      </div>
-      <div class="description">
-        <p>This will change, just need a placeholder :)</p>
+      <div class="ui grid">
+        <div class="ui medium rounded image four wide column">
+          <img src={{user.image}} alt="User Picture Here">
+          <input type="file" name="file" ng2FileSelect [uploader]="uploader">
+          <button type="button" class="ui button" (click)="uploader.uploadAll()" [disabled]="uploader.isReady || uploader.isUploading || uploader.isSuccess">
+            Upload
+          </button>
+        </div>
+        <div class="twelve wide column">
+          <div class="ui header">
+            {{ user.username }} - {{ user.email }}
+            <button [disabled]="isProcessing" class="ui green right floated mini button" (click)="updateUserSubmit()"><i class="checkmark icon"></i>&nbsp;Save</button>
+          </div>
+          <div class="meta">
+            <div class="cinema">About Me - This will display on your Public Profile
+              <button [disabled]="isProcessing" class="ui orange right floated mini button" (click)="cancelEdit()">Cancel</button>
+            </div>
+          </div>
+          <div class="description">
+            <div class="ui input">
+              <textarea [disabled]="isProcessing" type="text" [(ngModel)]="user.aboutMe" name="aboutMe" rows="8" cols="80" placeholder="About Me"></textarea>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
