--- a/client/src/app/components/products/products.component.html
+++ b/client/src/app/components/products/products.component.html
@@ -1,3 +1,18 @@
-<p>
-  products works!
-</p>
+<div class="ui card">
+  <div class="ui slide masked reveal image">
+    <img src="https://s3-us-west-1.amazonaws.com/makeupapp/25109664_brennenAndArcade.jpg" class="visible content">
+    <div class="hidden content">Hello World</div>
+  </div>
+  <div class="content">
+    <a class="header">Makeup</a>
+    <div class="meta">
+      <span class="date">Lipstick</span>
+    </div>
+  </div>
+  <div class="extra content">
+    <a>
+      <i class="users icon"></i>
+      Like
+    </a>
+  </div>
+</div>
