--- a/client/src/app/components/public-profile/public-profile.component.html
+++ b/client/src/app/components/public-profile/public-profile.component.html
@@ -10,7 +10,7 @@
       <div class="content">
         <div class="ui grid">
           <div class="ui medium rounded image four wide column">
-            <img src={{user.image}} alt="User Picture Here">
+            <img src={{user.imagePath}} alt="User Picture Here">
           </div>
           <div class="twelve wide column">
             <div class="ui header">
