--- a/client/src/app/components/profile/profile.component.html
+++ b/client/src/app/components/profile/profile.component.html
@@ -11,7 +11,7 @@
     <div class="content">
       <div class="ui grid">
         <div class="ui medium rounded image four wide column">
-          <img src={{user.image}} alt="User Picture Here">
+          <img src={{user.imagePath}} alt="User Picture Here">
         </div>
         <div class="twelve wide column">
           <div class="ui header">
@@ -35,7 +35,8 @@
     <div class="content">
       <div class="ui grid">
         <div class="ui medium rounded image four wide column">
-          <img src={{user.image}} alt="User Picture Here">
+          <!-- <img src="https://makeupapp.s3-us-west-1.amazonaws.com/25105226_MeAndRachel.jpg" alt="User Picture Here"> -->
+          <img src={{user.imagePath}} alt="User Picture Here">
           <input type="file" name="file" ng2FileSelect [uploader]="uploader">
           <button type="button" class="ui button" (click)="uploader.uploadAll()" [disabled]="uploader.isReady || uploader.isUploading || uploader.isSuccess">
             Upload
