--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -6,7 +6,7 @@
   <div class="column">
     <h2 class="ui teal dividing header">
       <div class="content">
-        Sign Up Here
+        Login Here
       </div>
     </h2>
     <!-- Start Form -->
